# uas-onboarding

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt  start_gunicorn.sh
flight/: main.py  test.py
src/: detector.py  main.py  requirements.txt
test_mavsdk/: CMakeLists.txt  camera.cpp  camera.h  detector.cpp  detector.h  detector.py  follow_circle.cpp  main.cpp  main.py  mission.cpp  offboard.cpp  pid.cpp  take_image  takeoff_and_land_orig.cpp
vision/: color_detection.py  color_detection_nathan.py  detector.py  main.py  target_detection.py  text_detection.py
vision/model/: text_labels.csv
